--- a/src/main/resources/static/mps.html
+++ b/src/main/resources/static/mps.html
@@ -139,15 +139,32 @@
                     <!-- Topbar Search -->
                     <form
                         class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-                        <div class="input-group">
-                            <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
-                                aria-label="Search" aria-describedby="basic-addon2">
-                            <div class="input-group-append">
-                                <button class="btn btn-primary" type="button">
-                                    <i class="fas fa-search fa-sm"></i>
-                                </button>
-                            </div>
-                        </div>
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <th><div class="input-group">
+                                        <button class="btn btn-outline-primary nav-button" type="button" data-toggle="modal"
+                                            data-target="#uploadModal">
+                                            Upload
+                                            <i class="fas fa-upload"></i>
+                                        </button>
+                                        <button class="btn btn-outline-primary nav-button" type="button" onclick="saveProblem()">
+                                            Save
+                                            <i class="far fa-save"></i>
+                                        </button>
+                                    </div></th>
+                                    <th><div class="input-group">
+                                        <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
+                                            aria-label="Search" aria-describedby="basic-addon2">
+                                        <div class="input-group-append">
+                                            <button class="btn btn-primary" type="button">
+                                                <i class="fas fa-search fa-sm"></i>
+                                            </button>
+                                        </div>
+                                    </div></th>
+                                </tr>
+                            </tbody>
+                        </table>
                     </form>
 
                     <!-- Topbar Navbar -->
@@ -693,11 +710,11 @@
                     lotSizingRule="Least Total Cost";
             }
             var result = new Array(1);
-            result[0]=construcRequestCommon()+ "&lotSizingRule=" + lotSizingRule;
+            result[0]=constructRequestCommon()+ "&lotSizingRule=" + lotSizingRule;
             return result
         }
     
-        function construcRequestCommon(){
+        function constructRequestCommon(){
             name = $("#itemName").val();
             levelCode = $("#levelCode").val();
             initialInventory = $("#initialInventory").val();
@@ -725,7 +742,7 @@
             var result = new Array(lotSizingRule.childNodes.length);
             for(var i=0;i<lotSizingRule.childNodes.length;i++){
                 if(i!=1&&lotSizingRule.childNodes.item(i).value!=null){
-                    result[i] = construcRequestCommon()+"&lotSizingRule=" + lotSizingRule.childNodes.item(i).value;
+                    result[i] = constructRequestCommon()+"&lotSizingRule=" + lotSizingRule.childNodes.item(i).value;
                 }
 
             }
@@ -733,7 +750,7 @@
             var tec = ["Lot for Lot", "Economic Order Quantity", "Periods Of Suply","Period Order Quantity","Least Unit Cost","Least Total Cost"]; 
             var result = new Array(tec.length);
             for(var i=0;i<tec.length;i++){
-                    result[i] = construcRequestCommon()+"&lotSizingRule=" + tec[i];
+                    result[i] = constructRequestCommon()+"&lotSizingRule=" + tec[i];
                    
             }
             return result;
@@ -966,6 +983,26 @@
                 console.log(error);
                 console.log("no funciona");
             })
+        }
+        function saveProblem(){
+            object = {data: constructRequestCommon()};
+            exportJson(object);
+        }
+        function exportJson(objectData){
+            let filename = "saved_problem.json";
+            let contentType = "application/json;charset=utf-8;";
+            if (window.navigator && window.navigator.msSaveOrOpenBlob) {
+                var blob = new Blob([decodeURIComponent(encodeURI(JSON.stringify(objectData)))], { type: contentType });
+                navigator.msSaveOrOpenBlob(blob, filename);
+            } else {
+                var a = document.createElement('a');
+                a.download = filename;
+                a.href = 'data:' + contentType + ',' + encodeURIComponent(JSON.stringify(objectData));
+                a.target = '_blank';
+                document.body.appendChild(a);
+                a.click();
+                document.body.removeChild(a);
+            }
         }
     </script>
 </body>
